# z0wallet

./: .gitignore  .gitmodules  Cargo.toml  README.md  remappings.txt
apps/: Cargo.toml
apps/src/: lib.rs
contracts/: EvenNumber.sol  LibZ0.sol  Z0Wallet.sol
host/: Cargo.toml
host/src/: main.rs
methods/guest/: Cargo.toml
methods/src/: lib.rs
script/: Deploy.s.sol
tests/: EvenNumber.t.sol  LibZ0.t.sol  Z0Wallet.t.sol
