[package]
name = "apps"
version = { workspace = true }
edition = { workspace = true }

[dependencies]
alloy-primitives = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bonsai-sdk = { workspace = true }
bytemuck = { workspace = true }
clap = { version = "4.0", features = ["derive", "env"] }
env_logger = { version = "0.10" }
ethers = { workspace = true }
futures = "0.3.30"
hex = { workspace = true }
log = { workspace = true }
methods = { workspace = true }
risc0-ethereum-contracts = { workspace = true }
risc0-zkvm = { workspace = true }
serde = { workspace = true }
tokio = { version = "1.35", features = ["full"] }
ethers-signers = "2.0.14"
ethers-core = "2.0.14"
cargo-platform = "=0.1.5"
bumpalo = "=3.14.0"
serde_json = "1.0.114"
ethereum-hexutil = "0.2.3"
